--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <section class="quote">
       quote
     </section>
-    <p>hello</p>
+    <p>hello friends</p>
     <footer>
       footer
     </footer>
