--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   </head>
   <body>
     <header>
-      header
+      Welcome
     </header>
     
     <section class="features">
@@ -15,9 +15,8 @@
     </section>
 
     <section class="quote">
-      quote
+      Progress, not perfection.
     </section>
-    <p>hello friends</p>
     <footer>
       footer
     </footer>
