--- a/index.html
+++ b/index.html
@@ -15,7 +15,22 @@
     </section>
 
     <section class="quote">
-      Progress, not perfection.
+      <p>
+        <script type="text/javascript">
+
+const api_url ="https://zenquotes.io/api/quotes/";
+
+async function getapi(url)
+{
+  const response = await fetch(url);
+  var data = await response.json();
+  console.log(data);
+}
+
+getapi(api_url);
+
+</script>
+      </p>
     </section>
     <footer>
       footer
